updating webapp template

--- a/src/web-app/templates/base.html
+++ b/src/web-app/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container mt-5 mb-5">
-        <div class="row mx-auto flex-column align-items-center">
+        <div class="row col-8 mx-auto flex-column align-items-center">
             {% block content %}
 
             {% endblock %}
